table printer simplifed and design displayer adjusted

--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -1562,7 +1562,7 @@ div.dataTables_wrapper div.dataTables_paginate, .dataTables_info{
   width: 11.5rem !important;
 }
 
-.column-call-manager-table.column-rfh{
+.column-call-manager-table.column-type{
   min-width: 1.2rem;
   width: 1.2rem !important;
 }
