--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -1488,7 +1488,8 @@ div.dataTables_wrapper div.dataTables_paginate, .dataTables_info{
 }
 
 .artist-out-of-program-popup-content div.dataTables_wrapper div.dataTables_filter input {
-    width: 19rem !important;
+    width: 18rem !important;
+    height: 2rem;
     font-size: 0.875rem;
 }
 
@@ -1536,6 +1537,9 @@ div.dataTables_wrapper div.dataTables_paginate, .dataTables_info{
     padding: 0.5rem 1.625rem 0.5rem 0.5rem !important;
 }
 
+th.column-call-manager-table{
+  line-height: 1rem;
+}
 
 .column-call-manager-table{
   white-space: normal;
@@ -1602,7 +1606,7 @@ div.dataTables_wrapper div.dataTables_paginate, .dataTables_info{
   li.select2-results__option{
     padding: 0 6px;  
     /* max-height: 22px; */
-    /* font-size: $almostNormalSize; */
+    font-size: $almostNormalSize;
   }
   input.select2-search__field {
     margin-bottom: 0;
@@ -1638,7 +1642,7 @@ th.column-call-manager-table {
   select{
     width: 100%;
     padding: 0;
-    padding-left: 0.2rem;
+    padding-left: 0.1rem;
     padding-right: 0.1rem;
     font-size: 0.75rem;
     margin: 0;
@@ -1647,9 +1651,9 @@ th.column-call-manager-table {
     top: 0.25rem;
   }
 
-/*   .rfh-selector{
-    width: 2rem;
-  } */
+  .rfh-selector{
+    width: 1.8rem;
+  }
 }
 
 
@@ -1756,13 +1760,14 @@ div.dataTables_wrapper div.dataTables_filter{
   margin-bottom: 1rem;
   height: 2rem;
   label{
-    @include horizontal-center;
+    /* @include horizontal-center; */
+    position: absolute;
+    right: 11rem;
   }
   input{
-    width: 20rem !important;
-    height: auto;
+    width: 18rem !important;
+    height: 2rem;
     font-size: $almostNormalSize;
-      /* @include horizontal-center; */
     }
 }
 .allCheckBoxesBox{
