--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -1571,7 +1571,7 @@ th.column-call-manager-table{
 
 
 .types-selector-call-manager{
-  margin-bottom: 2.5rem;
+  margin-bottom: 1.5rem;
   width: 20rem;
   display: inline-block;
   margin-right: 3rem;
@@ -1581,6 +1581,12 @@ th.column-call-manager-table{
     color: #444 !important;
   }
 
+}
+
+.ownReceivedFilters-call-page{
+  position: absolute;
+  top: 0.7rem;
+  z-index: 9;
 }
 
 
