--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -1494,7 +1494,8 @@ div.dataTables_wrapper div.dataTables_paginate, .dataTables_info{
 .artist-out-of-program-popup-content div.dataTables_wrapper div.dataTables_filter input {
     width: 18rem !important;
     height: 2rem;
-    font-size: 0.875rem;
+    font-size: $almostNormalSize;
+    padding: 0.2rem 0.5rem;
 }
 
 .table-box-proposal-manager{
