back to old version bdc2815

--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -968,10 +968,6 @@ Profile Section
   margin: 1.5rem 0;
 }
 
-.proposalText-TextArea, .proposalText-TextAreaCounter{
-  display: block;
-}
-
 .trash-icon-delete{
   font-size: $almostNormalSize;
   vertical-align: -0.1rem;
@@ -1494,9 +1490,21 @@ div.dataTables_wrapper div.dataTables_paginate, .dataTables_info{
 .artist-out-of-program-popup-content div.dataTables_wrapper div.dataTables_filter input {
     width: 18rem !important;
     height: 2rem;
-    font-size: $almostNormalSize;
-    padding: 0.2rem 0.5rem;
+    font-size: 0.875rem;
 }
+
+/* .table-box-proposal-manager{
+  position: relative;
+  overflow: auto;
+  max-height: 90vh;
+  height: 90vh;
+  margin-top: 2rem;
+  border: 1px solid $grey-3;
+  table{
+    width: 100%;
+  }
+} */
+
 
 .table-box-proposal-manager{
   position: relative;
@@ -1509,8 +1517,17 @@ div.dataTables_wrapper div.dataTables_paginate, .dataTables_info{
 }
 
 .table-box-proposal-manager tbody{
+  max-height: 90vh;
   overflow: auto;
 }
+
+/* td.column-call-manager-table{
+  min-width: 10rem;
+}  */
+/* .column-call-manager-table{
+  min-width: 8rem;
+} 
+ */
 
 .dataTables_scrollBody tbody td{
   padding: 0.2rem 0.5rem !important ;
@@ -1572,7 +1589,7 @@ th.column-call-manager-table{
 
 
 .types-selector-call-manager{
-  margin-bottom: 1.5rem;
+  margin-bottom: 2.5rem;
   width: 20rem;
   display: inline-block;
   margin-right: 3rem;
@@ -1582,12 +1599,6 @@ th.column-call-manager-table{
     color: #444 !important;
   }
 
-}
-
-.ownReceivedFilters-call-page{
-  position: absolute;
-  top: 0.7rem;
-  z-index: 9;
 }
 
 
@@ -1996,6 +2007,7 @@ Program Manager Tab
 }
 
 .time-table-call-manager{
+  /* position: relative; */
   display: inline-block;
   width: 3rem;
 }
@@ -2022,6 +2034,8 @@ Program Manager Tab
   width: 13rem;
   border: 1px solid;
   z-index: 4;
+/*   min-height: 90vh;
+  max-height: 90vh; */
   .accordion-item{
     height: 3rem;
     border-bottom: 1px solid $grey-2;
