--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -1571,7 +1571,8 @@ th.column-call-manager-table{
 
 
 .types-selector-call-manager{
-  margin-bottom: 2rem;
+  margin-top: -0.5rem;
+  margin-bottom: 3rem;
   width: 20rem;
   display: inline-block;
   margin-right: 3rem;
@@ -1955,7 +1956,8 @@ p.initial-text-proposalPanel{
 .innerCreateProposals-Cont{
   position: absolute;
   right: 0;
-  top: -1rem;
+  top: 0.7rem;
+  left: 24rem;
 }
 
  
